Resolve alignmnet

--- a/wp-content/themes/twentysixteen/style.css
+++ b/wp-content/themes/twentysixteen/style.css
@@ -4816,6 +4816,9 @@ body {
 .first_select {
 	margin-left: 15px;
 }
+.form_reg_1 .form_section .radio_btn .dhvc-form-radio label {
+	padding: 3px 0 0 20px;
+}
 /* -------------------------Responsive----------------------------------------------*/
 
 @media only screen and (min-width: 1200px) and (max-width: 1400px) { 
